--- a/plutus-sources/plutus-helloworld/plutus-helloworld.cabal
+++ b/plutus-sources/plutus-helloworld/plutus-helloworld.cabal
@@ -46,6 +46,7 @@ library
 
   exposed-modules:      Cardano.PlutusExample.HelloWorld
                       , Cardano.PlutusExample.HelloWorldByteStringParametric
+                      , Cardano.PlutusExample.HelloWorldChrismo
 
   build-depends:        bytestring
                       , cardano-api
@@ -81,4 +82,16 @@ executable plutus-helloworld-bytestring
                       , plutus-tx
                       , bytestring
 
+executable plutus-helloworld-chrismo
+  import:               base, project-config
+  hs-source-dirs:       app
+  main-is:              plutus-helloworld-chrismo.hs
+  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
+
+  build-depends:        aeson
+                      , cardano-api
+                      , plutus-helloworld
+                      , plutus-ledger-api
+                      , plutus-tx
+                      , bytestring
 
